[v9r1p13]
use DIRAC v6r19p21

* boinc docs, config template ReqProxy, generic hostname placeholder
* TS: correct cast to set to fix exception in the ReplicateToLocalSE plugin
* Boinc todo update, find old files in the SE
* dirac.cfg template updated, changes in REA section
* additions to the BOINC how-to
* add new plugin name to set files invisible
* boinc docs correction and additions
* fix files count in getRanges
* DOC: correct BOINC self signed certificate options
* clean
* reset global variables
* suppress list of dirs
* initialize global variables in the main method
* small fix

[v9r1p12]
use DIRAC v6r19p21

* code cleanup
* code style again
* style
* better usage of BK path wildcards
* add option --Summary to switch off stats per SE and sites
* Rename RemoveDataset to RemoveDatasetFromDisk
* getFilesSummary takes into account DQ flag
* improve logging
* set replication limits in ReplicateToRunDestination as well as ReplicateToLocalSE
* remove SE group resolution in scripts
* overwrite __checkSEs to avoid resolving SE groups upstream
* Docs: more DMS doc
* Docs: correction for RAWShare
* Docs: more operational docs
* Docs: operational docs
* visual indent, sigh
* code-style adjustment
* autopip8 WMSSecureGWHandler.py
* style
* just adding setup.cfg file
* backported rescheduling of Ganga jobs for lb-run errors
* update of docs and config template
* fixes on types_getJobParameter and commitRegisters URL

[v9r1p11]
use DIRAC v6r19p20

[v9r1p10]
use DIRAC v6r19p19

* allow debug by run when giving a list of LFNs
* add information
* to get pipelines working
* give more precise advice when checking a single stream, and replace always() with notice()
* fix progress bar that was embedded
* improve printout for summary of PFN metadata
* backport pylint fixes
* remove old BOINC host
* add BOINC host for update
* mod message

[v9r1p9]
use DIRAC v6r19p17

* accounting for boinc in GW, commitRegisters
* a few changes in the docs