@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v9r1p14
+  {
+    Modules = LHCbDIRAC:v9r1p14, LHCbWebDIRAC:v4r4p6
+    Depends = DIRAC:v6r19p21
+    LcgVer = v13r0
+  }
+
   v9r1p13
   {
     Modules = LHCbDIRAC:v9r1p13, LHCbWebDIRAC:v4r4p6
